# spot-detection

./: LICENSE  README.md  setup.cfg  tox.ini
spot_detection/: _function.py
spot_detection/_tests/: test_dock_widget.py  test_function.py
