[metadata]
name = spot-detection
version = 0.0.1
author = Sebastian Gonzalez-Tirado
author_email = sebgoti8@gmail.com
license = BSD-3-Clause
url = https://github.com/sebgoti/spot-detection
description = A siple plugin to detect spots in spatial transcriptomics data
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Framework :: napari
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent
    License :: OSI Approved :: BSD License
project_urls =
    Bug Tracker = https://github.com/sebgoti/spot-detection/issues
    Documentation = https://github.com/sebgoti/spot-detection#README.md
    Source Code = https://github.com/sebgoti/spot-detection
    User Support = https://github.com/sebgoti/spot-detection/issues

[options]
packages = find:
python_requires = >=3.7

# add your package requirements here
install_requires =
    napari-plugin-engine>=0.1.4
    numpy


[options.entry_points] 
napari.plugin = 
    spot-detection = spot_detection
